# ta-dashboard-be

./: .gitignore  Dockerfile  README.md  app.py  echo-ip-port.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yaml
chart/: Chart.yaml  values.yaml
manifests/: deployment.yaml  ingress.yaml  service.yaml
schema/: 01-create-db.sh  02-create-tables.sh  create-db.sh  db.env  ta_dashboard_insert.sql  ta_dashboard_tables.sql
ta/: __init__.py  model.py  views.py
ta/templates/: base.html  index.html
templates/: base.html  index.html
