[tool.poetry]
name = "ta-dashboard"
version = "0.1.0"
description = ""
authors = ["eonuallain <dev.eonuallain@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.2.7"
flask = "^3.0.3"
pika = "^1.3.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
